# aether

./: .gitignore  README.md  cache.py  cluster.py  faiss.py  fuzz.py  hdbscan.py  kmeans.py  log_entry.py  main.py  makefile  openai.py  pyproject.toml  requirements.txt  sync_dependencies.sh  tasks.py
apps/console/: README.md  main.py  pyproject.toml
apps/console/console/: main.py
libs/core/: Makefile  README.md  pyproject.toml
libs/core/core/: __init__.py  llm.py  log_clusterer.py  log_contextualizer.py  log_entry.py  log_filter.py  prompt.py  util.py
libs/devel/: README.md  pyproject.toml
prompt/: filter_failures.md  summarize.md
src/: cluster.py  filesystem.py  llm.py  log_clusterer.py  log_contextualizer.py  log_entry.py  log_filter.py  log_plugin.py  log_reader.py  main.py  openai.py  util.py
