[tool.poetry]
name = "aether-monorepo"
version = "0.1.0"
description = "Aether mono-repo"
authors = []
license = "MIT"
readme = "README.md"
repository = "https://www.github.com/emgarten/aether"

[tool.poetry.dependencies]
python = "^3.10"

[tool.black]
line-length = 1024
include = '\.pyi?$'

[tool.flake8]
max-line-length = 1024
exclude = [
    ".venv",
    "build"
]
ignore = [
    "E203",
    "W503",
    "E402",
    "E501",
]

[tool.isort]
profile = "black"
