[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["emgarten <justin@emgarten.com>"]

[tool.poetry.dependencies]
python = "^3.10"
core = {path = "../../libs/core",  develop = true}

[tool.poetry.dev-dependencies]
devel = {path = "../../libs/devel", develop = true}
requests = "^2.28.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"