[tool.poetry]
name = "core"
version = "0.1.0"
description = "core module"
authors = ["emgarten <justin@emgarten.com>"]

[tool.poetry.dependencies]
python = "^3.10"
rapidfuzz = "3.10.1"
openai = "1.57.4"

[tool.poetry.group.dev.dependencies]
devel = {path = "../devel", develop = true }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"