[tool.poetry]
name = "devel"
version = "0.1.0"
description = "shared development tools"
authors = ["emgarten <justin@emgarten.com>"]
packages = [
    {include = "README.md"},
]
[tool.poetry.dependencies]
python = "^3.10"
black = "24.10.0"
flake8-pyproject = "1.2.3"
isort = "5.13.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"