[tool.poetry]
name = "devel"
version = "0.1.0"
description = "shared development tools"
authors = ["emgarten <justin@emgarten.com>"]
packages = [
    {include = "README.md"},
]
[tool.poetry.dependencies]
python = "^3.10"
ruff = "^0.9.2"
mypy = "^1.14.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"